crates/hexeract-macros/tests/ui/fail_notification_arc_non_std.stderr
error: a notification handler argument must be a standard `Arc<N>` (`std::sync::Arc` or `alloc::sync::Arc`), since the notification is shared across handlers
  --> tests/ui/fail_notification_arc_non_std.rs:15:32
   |
15 |     async fn handle(&self, _n: foo::Arc<N>, _ctx: &HandlerContext) -> Result<(), HexeractError> {
   |                                ^^^^^^^^^^^

warning: unused imports: `HandlerContext` and `HexeractError`
 --> tests/ui/fail_notification_arc_non_std.rs:1:21
  |
1 | use hexeract_core::{HandlerContext, HexeractError, Notification};
  |                     ^^^^^^^^^^^^^^  ^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `std::sync::Arc`
 --> tests/ui/fail_notification_arc_non_std.rs:5:13
  |
5 |     pub use std::sync::Arc;
  |             ^^^^^^^^^^^^^^
